Bug 310465 - Can't switch view mode for non-writable paths
Summary: Can't switch view mode for non-writable paths
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-21 21:34 UTC by Christian Muehlhaeuser
Modified: 2012-11-25 20:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Muehlhaeuser 2012-11-21 21:34:20 UTC
If I navigate to a directory that has a .directory file inside which is neither readable nor writable by the current user, Dolphin fails to successfully switch between view modes: you can click and toggle the view-mode button, but the mode never gets shown. Once I make the file read & writable, Dolphin can immediately switch between view modes again.


Reproducible: Always

Steps to Reproduce:
1. Make a directory's .directory file non readable & non writable to the current user.
2. Navigate to this directory.
3. Try to switch to a new view mode inside Dolphin.
Actual Results:  
The button gets toggled / activated, but the view mode never changes.

Expected Results:  
Expected behavior: Even if Dolphin can't store the new view mode setting in a .directory file, it should still succeed switching between modes.
Comment 1 Emmanuel Pescosta 2012-11-25 14:41:21 UTC
Review-Request: https://git.reviewboard.kde.org/r/107458/
Comment 2 Emmanuel Pescosta 2012-11-25 20:45:15 UTC
Git commit 56407d94bf8b91bcf1b0a5b37f33d29babb5a9fd by Emmanuel Pescosta.
Committed on 25/11/2012 at 21:44.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fix Bug 310465 - Can't switch view mode for non-writable paths
FIXED-IN: 4.9.4
REVIEW: 107458

M  +7    -2    dolphin/src/views/viewproperties.cpp

http://commits.kde.org/kde-baseapps/56407d94bf8b91bcf1b0a5b37f33d29babb5a9fd