Fix Bug 310465 - Can't switch view mode for non-writable paths

BUG: 310465
FIXED-IN: 4.9.4
REVIEW: 107458